--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,11 @@
 # Blog settings
 # permalink: /blog/:title
 
+collections:
+  posts:
+    output: true
+    permalink: /blog/:title
+
 
 # My variables
 name: Luis Echegaray
